# Projeto-Integrativo-IV_Piloto

./: .gitignore  README.md
egglink_server/: script_planilha.txt  server-v1.py  server-v2.py  server-v3.py  test_bot.py
ot_cli_gateway_final/: .gitignore
ot_cli_gateway_final/components/aht/: CMakeLists.txt
ot_cli_gateway_final/components/esp_idf_lib_helpers/include/: esp_idf_lib_helpers.h
ot_cli_gateway_final/components/sensor_gases/: sensor_gases.c  sensor_gases.h
ot_cli_gateway_final/components/sensor_temp-umiA/: CMakeLists.txt  sensor_temp-umiA.h
ot_cli_gateway_final/components/sensor_umiS/: CMakeLists.txt  sensor_umiS.h
ot_cli_gateway_final/main/: CMakeLists.txt  esp_ot_cli.cpp  esp_ot_cli.hpp  http_request.cpp  http_request.hpp  main.cpp  node_info.hpp  node_table.cpp  node_table.hpp  sensor_collect.cpp  sensor_collect.hpp  sensor_data.hpp  sensor_json.hpp  wifi_connect.cpp  wifi_connect.hpp
ot_cli_nos_final/: CMakeLists.txt  sdkconfig
ot_cli_nos_final/components/i2cdev/: CMakeLists.txt
ot_cli_nos_final/components/sensor_gases/: CMakeLists.txt  sensor_gases.h
ot_cli_nos_final/components/sensor_temp-umiA/: CMakeLists.txt  sensor_temp-umiA.c  sensor_temp-umiA.h
ot_cli_nos_final/components/sensor_umiS/: sensor_umiS.c
ot_cli_nos_final/main/: .gitignore  CMakeLists.txt  esp_ot_cli.c  esp_ot_cli.h  main.c  sensor_collect.c  sensor_collect.h  sensor_json.h
